--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
-h1 {
-  background: yellow;
+#hero {
+  height: 800px;
+  background-image: url("images/places/ocean.jpg");
+  background-position: center;
+  background-size: cover;
 }
